--- a/CameraSelectionOfAssistant/CameraSelectionOfAssistant.csproj
+++ b/CameraSelectionOfAssistant/CameraSelectionOfAssistant.csproj
@@ -75,6 +75,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DhfLib\Infrastructure\EnumHelper.cs" />
+    <Compile Include="DhfLib\Serialization\JsonSerialization.cs" />
+    <Compile Include="VisionCalculate.cs" />
+    <Compile Include="Sensor.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
